--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -13,10 +13,10 @@
                 <div class="row footer-top-29">
                     <div class="col-lg-4 col-md-6 footer-list-29">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2 pe-xl-5">Address : Eazy School, 10001, 5th Avenue, #06 lane street, NY - 10017.
+                        <p class="mb-2 pe-xl-5">Address : Learnscape, A-2 Nandan Kanan, Santoshpur Kolkata-700075.
                         </p>
                         <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 673 4587</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@eazyschool.com">info@eazyschool.com</a></p>
+                        <p class="mb-2">Email : <a href="mailto:support@learnscape.com">support@learnscape.com</a></p>
                     </div>
                     <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                         <ul>
@@ -49,8 +49,8 @@
                     </div>
                 </div>
                 <!-- copyright -->
-            <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2023 Eazy School. All rights reserved. Design
-                    by <a href="https://w3layouts.com/" target="_blank">W3Layouts</a></p>
+            <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Learnscape. All rights reserved. Design
+                    by Debarshi</p>
                 <!-- //copyright -->
             </div>
         </div>
