--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -195,51 +195,50 @@ Author URL: http://w3layouts.com
                             <li class="anim1">
                                 <img src="assets/images/testi1.jpg" class="img-fluid rounded-circle"
                                     alt="client image" />
-                                <blockquote class="quote"><q>I am very happy that my son is studying in the
+                                <blockquote class="quote"><q>I am very happy that my son is studying at
                                     Learnscape. The support provided by the teachers is great and the curriculum
                                     that they follow is of international standards.
                                     </q> </blockquote>
-                                <div class="source">- Mario Spe</div>
+                                <div class="source">- Madhumita Saha</div>
                             </li>
 
                             <li class="anim2">
                                 <img src="assets/images/testi2.jpg" class="img-fluid rounded-circle"
                                     alt="client image" />
-                                <blockquote class="quote"><q>My child never felt pressure of studies in
-                                    the Learnscape. He is always encouraged to follow his own interest
+                                <blockquote class="quote"><q>My child never felt pressure of studies at Learnscape.
+                                    He is always encouraged to follow his own interests
                                      and the school provides wide variety of programs for the students
                                      outside studies.
                                     </q> </blockquote>
-                                <div class="source">- Petey Cru</div>
+                                <div class="source">- Nishi Singh</div>
                             </li>
                             <li class="anim3">
                                 <img src="assets/images/testi3.jpg" class="img-fluid rounded-circle "
                                     alt="client image" />
-                                <blockquote class="quote"><q>Loved the infrastructure and cleanly
-                                     environment that school maintains. This is very important
+                                <blockquote class="quote"><q>Loved the infrastructure and clean
+                                     environment that the school maintains. This is very important
                                      in the current pandemic situations.
                                     </q> </blockquote>
-                                <div class="source">- Anna Sth</div>
+                                <div class="source">- Anjali Kumari</div>
                             </li>
                             <li class="anim4">
-                                <img src="assets/images/testi1.jpg" class="img-fluid rounded-circle"
+                                <img src="assets/images/testi4.jpg" class="img-fluid rounded-circle"
                                     alt="client image" />
-                                <blockquote class="quote"><q>With the help of Cambridge
+                                <blockquote class="quote"><q>With the help of
                                     authorized programs, teachers always
                                     enhancing my child classroom experiences
                                     by applying new ideas & approaches.
                                     </q> </blockquote>
-                                <div class="source">- Gail For</div>
+                                <div class="source">- Deepak Chowdhury</div>
                             </li>
                             <li class="anim5">
-                                <img src="assets/images/testi2.jpg" class="img-fluid rounded-circle"
+                                <img src="assets/images/testi5.jpg" class="img-fluid rounded-circle"
                                     alt="client image" />
                                 <blockquote class="quote"><q>Learnscape supports both online and offline
                                     classes based on the pandemic conditions to make sure that there is
-                                     no impact on the children studies. School staff always does their
-                                     best to accommodate parents request.
+                                     no impact on the children studies.
                                     </q> </blockquote>
-                                <div class="source">- Boye Fra</div>
+                                <div class="source">- Nilesh Roy</div>
                             </li>
                         </ul>
                     </div>
