Added webapp images

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -55,7 +52,7 @@ Author URL: http://w3layouts.com
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     </div>
                     <div class="col-md-8 login-center text-start">
-                        <button class="btn btn-style btn-style-3 text-left">Log In</button>
+                        <button class="btn btn-style btn-style-3 text-left">LOGIN</button>
                         <a th:href="@{/public/register}" class="new-user text-right">New User ?</a>
                     </div>
                 </form>
