--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -111,7 +111,7 @@
                      by sanitizing the schools daily. Enough security is in place with the help of
                      dedicated security team and cameras inside the campus.</p>
                     <div class="d-flex align-items-center mt-5">
-                        <a class="btn btn-style btn-style-3" th:href="@{/contact}">Contact Us</a>
+                        <a class="btn btn-style btn-style-3" th:href="@{/contact}">CONTACT US</a>
                         <a class="btn btn-style-primary ms-4" th:href="@{/contact}">Learn More <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
