--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -69,7 +66,7 @@ Author URL: http://w3layouts.com
                             <textarea th:field="*{message}" placeholder="Type your message here"></textarea>
                         </div>
                         <div class="text-start">
-                            <button class="btn btn-style btn-style-3">Send Message</button>
+                            <button class="btn btn-style btn-style-3">SEND MESSAGE</button>
                         </div>
                     </form>
                 </div>
@@ -82,7 +79,7 @@ Author URL: http://w3layouts.com
                                 </div>
                                 <div class="cont-right">
                                     <h6>School Address</h6>
-                                    <p>Learnscape, 10001, 5th Avenue, #06 lane street, NY - 10017.</p>
+                                    <p>Learnscape, A-2 Nandan Kanan, Santoshpur Kolkata-700075.</p>
                                 </div>
                             </div>
                             <div class="d-flex contact-grid mt-4 pt-lg-2">
@@ -91,7 +88,7 @@ Author URL: http://w3layouts.com
                                 </div>
                                 <div class="cont-right">
                                     <h6>Call Us</h6>
-                                    <p><a href="tel:+1(21) 234 4567">+1(21) 673 4587</a></p>
+                                    <p><a href="tel:+1(21) 234 4567">+91-7044837799</a></p>
                                 </div>
                             </div>
                             <div class="d-flex contact-grid mt-4 pt-lg-2">
@@ -100,7 +97,7 @@ Author URL: http://w3layouts.com
                                 </div>
                                 <div class="cont-right">
                                     <h6>Email Us</h6>
-                                    <p><a href="mailto:support@learnscape.com" class="mail">support@learnscape.com</a></p>
+                                    <p><a href="mailto:support@learnscape.com" class="mail">info@learnscape.com</a></p>
                                 </div>
                             </div>
                             <div class="d-flex contact-grid mt-4 pt-lg-2">
@@ -121,8 +118,8 @@ Author URL: http://w3layouts.com
     <!-- map -->
     <div class="map">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830921454!2d-74.11976369744556!3d40.69766374856529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1639587930884!5m2!1sen!2sin"
-            width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.1634377851037!2d88.39451537341897!3d22.498050335702146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02715eaf49ab2d%3A0x317166257f974ab1!2sBorakhola%2C%20Nandan%20Kanan%2C%20Santoshpur%2C%20Kolkata%2C%20West%20Bengal%20700099!5e0!3m2!1sen!2sin!4v1719659258266!5m2!1sen!2sin"
+                width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
     </div>
     <!-- //contact block -->
 
