--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -47,7 +44,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c1.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c1.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;" />
                             <div class="meta-list">
                                 <a>Education</a>
                             </div>
@@ -68,7 +65,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c2.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c2.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-2">Meditation</a>
                             </div>
@@ -89,7 +86,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c3.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c3.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-3">Games</a>
                             </div>
@@ -110,7 +107,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c4.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c4.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;" />
                             <div class="meta-list">
                                 <a href="courses.html">Development</a>
                             </div>
@@ -130,7 +127,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c5.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c5.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-2">Audio & Music</a>
                             </div>
@@ -150,7 +147,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c6.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c6.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-3">Art & Design</a>
                             </div>
