--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -15,8 +15,8 @@
                         <h6 class="footer-title-29">Contact Info </h6>
                         <p class="mb-2 pe-xl-5">Address : Learnscape, A-2 Nandan Kanan, Santoshpur Kolkata-700075.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 673 4587</a></p>
-                        <p class="mb-2">Email : <a href="mailto:support@learnscape.com">support@learnscape.com</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+91-7044837799</a></p>
+                        <p class="mb-2">Email : <a href="mailto:support@learnscape.com">info@learnscape.com</a></p>
                     </div>
                     <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                         <ul>
