--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,6 +25,12 @@
                             <a th:href="@{/home}" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAnonymous()">
+                            <a th:href="@{/about}" class="nav-link" aria-current="page">About Us</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAnonymous()">
+                            <a th:href="@{/holidays/all}" class="nav-link" aria-current="page">Holidays</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAnonymous()">
                             <a th:href="@{/courses}" class="nav-link">Courses</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAnonymous()">
