--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -31,19 +28,19 @@ Author URL: http://w3layouts.com
                         </h3>
                         <p class="banner-sub">Active Learning, Expert Teachers & Safe Environment</p>
                         <div class="d-flex align-items-center buttons-banner">
-                            <a th:href="@{/contact}" class="btn btn-style mt-lg-5 mt-4">Admission Now</a>
+                            <a th:href="@{/contact}" class="btn btn-style mt-lg-5 mt-4">ADMISSION OPEN</a>
                         </div>
                     </div>
-                    <div class="col-md-6 right-banner-2 text-end position-relative mt-md-0 mt-5">
-                        <div class="sub-banner-image mx-auto">
-                            <img src="assets/images/banner.png" class="img-fluid position-relative" alt=" ">
-                        </div>
-                        <div class="banner-style-1 position-absolute">
-                            <div class="banner-style-2 position-relative">
-                                <h4>Back to School</h4>
-                            </div>
-                        </div>
-                    </div>
+<!--                    <div class="col-md-6 right-banner-2 text-end position-relative mt-md-0 mt-5">-->
+<!--                        <div class="sub-banner-image mx-auto">-->
+<!--                            <img src="assets/images/banner.png" class="img-fluid position-relative" alt=" ">-->
+<!--                        </div>-->
+<!--&lt;!&ndash;                        <div class="banner-style-1 position-absolute">&ndash;&gt;-->
+<!--&lt;!&ndash;                            <div class="banner-style-2 position-relative">&ndash;&gt;-->
+<!--&lt;!&ndash;                                <h4>Back to School</h4>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -92,7 +89,7 @@ Author URL: http://w3layouts.com
     <!-- home 4grids block -->
 
     <!-- home image with content block -->
-    <section class="w3l-servicesblock pt-lg-5 pt-4 pb-5 mb-lg-5" id="about">
+    <section class="w3l-servicesblock pt-lg-5 pt-4 pb-1 mb-lg-1" id="about">
         <div class="container pb-md-5 pb-4">
             <div class="row pb-xl-5 align-items-center">
                 <div class="col-lg-6 position-relative home-block-3-left pb-lg-0 pb-5">
@@ -102,7 +99,7 @@ Author URL: http://w3layouts.com
                     <div class="imginfo__box">
                         <h6 class="imginfo__title">Get an Appointment Today!</h6>
                         <p>Call today to know more details<br> and to talk with our expert. </p>
-                        <a href="tel:http://1(800)7654321"><i class="fas fa-phone-alt"></i> 1-800-856-4321</a>
+                        <a href="tel:http://1(800)7654321"><i class="fas fa-phone-alt"></i> +91-7044837799</a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 mt-lg-0 mt-5 pt-lg-0 pt-5">
@@ -114,7 +111,7 @@ Author URL: http://w3layouts.com
                         <li><i class="fas fa-check-circle"></i>Access more than 100K online courses</li>
                         <li><i class="fas fa-check-circle"></i>Traditional Academies</li>
                     </ul>
-                    <a th:href="@{/contact}" class="btn btn-style mt-5">Apply Now</a>
+                    <a th:href="@{/contact}" class="btn btn-style mt-5">APPLY NOW</a>
                 </div>
             </div>
         </div>
@@ -194,7 +191,7 @@ Author URL: http://w3layouts.com
                         <ul>
                             <li class="anim1">
                                 <img src="assets/images/testi1.jpg" class="img-fluid rounded-circle"
-                                    alt="client image" />
+                                    alt="client image" style="height: 130px; width: 130px;"/>
                                 <blockquote class="quote"><q>I am very happy that my son is studying at
                                     Learnscape. The support provided by the teachers is great and the curriculum
                                     that they follow is of international standards.
@@ -204,7 +201,7 @@ Author URL: http://w3layouts.com
 
                             <li class="anim2">
                                 <img src="assets/images/testi2.jpg" class="img-fluid rounded-circle"
-                                    alt="client image" />
+                                    alt="client image" style="height: 130px; width: 130px;"/>
                                 <blockquote class="quote"><q>My child never felt pressure of studies at Learnscape.
                                     He is always encouraged to follow his own interests
                                      and the school provides wide variety of programs for the students
@@ -214,7 +211,7 @@ Author URL: http://w3layouts.com
                             </li>
                             <li class="anim3">
                                 <img src="assets/images/testi3.jpg" class="img-fluid rounded-circle "
-                                    alt="client image" />
+                                    alt="client image" style="height: 130px; width: 130px;"/>
                                 <blockquote class="quote"><q>Loved the infrastructure and clean
                                      environment that the school maintains. This is very important
                                      in the current pandemic situations.
@@ -223,7 +220,7 @@ Author URL: http://w3layouts.com
                             </li>
                             <li class="anim4">
                                 <img src="assets/images/testi4.jpg" class="img-fluid rounded-circle"
-                                    alt="client image" />
+                                    alt="client image" style="height: 130px; width: 130px;"/>
                                 <blockquote class="quote"><q>With the help of
                                     authorized programs, teachers always
                                     enhancing my child classroom experiences
@@ -233,7 +230,7 @@ Author URL: http://w3layouts.com
                             </li>
                             <li class="anim5">
                                 <img src="assets/images/testi5.jpg" class="img-fluid rounded-circle"
-                                    alt="client image" />
+                                    alt="client image" style="height: 130px; width: 130px;"/>
                                 <blockquote class="quote"><q>Learnscape supports both online and offline
                                     classes based on the pandemic conditions to make sure that there is
                                      no impact on the children studies.
@@ -259,7 +256,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c1.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c1.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a>Education</a>
                             </div>
@@ -280,7 +277,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c2.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c2.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-2">Meditation</a>
                             </div>
@@ -301,7 +298,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
                     <div class="coursecard-single">
                         <div class="grids5-info position-relative">
-                            <img src="assets/images/c3.jpg" alt="" class="img-fluid" />
+                            <img src="assets/images/c3.jpg" alt="" class="img-fluid" style="height: 225px; width: 350px;"/>
                             <div class="meta-list">
                                 <a class="sec-3">Games</a>
                             </div>
@@ -322,7 +319,7 @@ Author URL: http://w3layouts.com
             </div>
             <div class="text-center mt-sm-5 mt-4 pt-sm-0 pt-1">
                 <a th:href="@{/courses}" class="btn btn-style btn-style-secondary mt-sm-3">
-                    Browse more courses</a>
+                    BROWSE ALL COURSES</a>
             </div>
         </div>
     </div>
@@ -339,7 +336,7 @@ Author URL: http://w3layouts.com
                 <div class="right-content-call mt-lg-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+1(23) 456 789 0000">+1(23) 673 458 1111</a>
+                            <a class="call-style-w3" href="tel:+1(23) 456 789 0000">+91-7044837799</a>
                         </li>
                         <li><a th:href="@{/contact}" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Join for free</a>
                         </li>
