--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -26,7 +23,7 @@ Author URL: http://w3layouts.com
     <section class="inner-banner py-5">
         <div class="w3l-breadcrumb py-lg-5">
             <div class="container pt-4 pb-sm-4">
-                <h4 class="inner-text-title pt-5">Register</h4>
+                <h4 class="inner-text-title pt-5">REGISTER</h4>
                 <ul class="breadcrumbs-custom-path">
                     <li><a th:href="@{/home}">Home</a></li>
                     <li class="active"><i class="fas fa-angle-right"></i>Register</li>
