--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -37,14 +37,14 @@
         <div class="container py-md-5 py-4">
             <div class="title-main text-center mx-auto mb-md-5 mb-4" style="max-width:500px;">
                 <p class="text-uppercase">Our Team</p>
-                <h3 class="title-style">Meet our Teachers</h3>
+                <h3 class="title-style">Meet Our Teachers</h3>
             </div>
             <div class="row text-center left-side">
                 <div class="col-lg-3 col-6">
                     <div class="image-one">
                         <a href="#team">
-                            <img src="assets/images/team1.png" class="arrow-png img-responsive" />
-                            <h4>Emma Watson</h4>
+                            <img src="assets/images/team1.png" class="arrow-png img-responsive" style="height: 325px; width: 250px;"/>
+                            <h4>Anuradha Ghosh</h4>
                             <div class="buttons-teams2 mt-2">
                                 <a href="#team"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#team"><i class="fab fa-twitter-square"></i></a>
@@ -56,8 +56,8 @@
                 <div class="col-lg-3 col-6">
                     <div class="image-one">
                         <a href="#team">
-                            <img src="assets/images/team2.png" class="arrow-png img-responsive">
-                            <h4>Enrique Lal</h4>
+                            <img src="assets/images/team2.png" class="arrow-png img-responsive" style="height: 325px; width: 250px;">
+                            <h4>Ashish Patel</h4>
                             <div class="buttons-teams2 mt-2">
                                 <a href="#team"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#team"><i class="fab fa-twitter-square"></i></a>
@@ -69,8 +69,8 @@
                 <div class="col-lg-3 col-6 mt-lg-0 mt-4">
                     <div class="image-one">
                         <a href="#team">
-                            <img src="assets/images/team3.png" class="arrow-png img-responsive">
-                            <h4>Smith Ker</h4>
+                            <img src="assets/images/team3.png" class="arrow-png img-responsive" style="height: 325px; width: 250px;">
+                            <h4>Sunirmal Sen</h4>
                             <div class="buttons-teams2 mt-2">
                                 <a href="#team"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#team"><i class="fab fa-twitter-square"></i></a>
@@ -82,8 +82,8 @@
                 <div class="col-lg-3 col-6 mt-lg-0 mt-4">
                     <div class="image-one">
                         <a href="#team">
-                            <img src="assets/images/team4.png" class="arrow-png img-responsive">
-                            <h4>Forkler Lee</h4>
+                            <img src="assets/images/team4.png" class="arrow-png img-responsive" style="height: 325px; width: 250px;">
+                            <h4>Snigdha Roy</h4>
                             <div class="buttons-teams2 mt-2">
                                 <a href="#team"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#team"><i class="fab fa-twitter-square"></i></a>
